--- a/code/ts/public/index.html
+++ b/code/ts/public/index.html
@@ -21,15 +21,19 @@
       background: #ccc;
       text-align: center;
     }
+    .buttons {
+      margin-top: 10px;
+    }
     button {
-      width: 40px;
-      height: 40px;
+      width: 60px;
+      height: 60px;
       text-align: center;
       font-size: 30px;
       font-weight: bold;
+      margin: 0 10px;
     }
     .buttons-top {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
